k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forecasting
  labels:
    app.kubernetes.io/part-of: ts-forecast
